v0.13.0
  - changes needed for use with Elasticsearch v7
  - handle the v7 "total" as an object rather than a scalar
  - use timestamp with no colons
  - update elasticsearch gem version for consistency with target ES version
v0.12.1
  - use Arel.sql to avoid unsafe sql and eliminate deprecation warnings when used in Rails projects
v0.12.0
  - warn when configuring a index with subclasses if using ES version that does support them
  - raise exception when creating or adding document to an index configured with subclasses if using
     an ES version that does not support them
v0.11.5
 - Give the option of retrying the deletion for certain exceptions during remap
v0.11.4
 - Fully clean up if error occurs during remap (assign all aliases back to original index)
v0.11.3
 - Adds support for preserving the order or normalized names of `highlight` through `highlighted_attrs`

v0.11.2
 - Adds support for passing arguments to Search definition through `search(query, search_args)` in index searching and msearch
 - adds _explanation to hold value of returned explanations in the base document

v0.11.1
  - support `action.destructive_requires_name` setting by being explict about which indices to delete

v0.11.0
  - compatibilty with ES v6
    - change mappings for 'index' to boolean. "string" type was replaced with "text"
    - use "successful" from API response ('created' was removed)
  - stringify keys for :mappings so clients can use symbol keys
v0.10.0
	- update remap to removing fields from the mapping that are not explicitly
	defined.
v0.9.1
	- fix search enumerator, missing first result set
v0.8.3
	- fix remap method to use the scan api properly.
v0.8.2
	- fix scan api to work with more recent versions of elasticsearch ruby.
v0.8.1
	- loosen support for elasticsearch-ruby versions to support more versions of
	elasticsearch
v0.8.0
 - Make Elasticity::Strategies::AliasIndex the default