@@ -1,6 +1,6 @@
 module Elasticity
   class InstrumentedClient
-    INDICES_METHODS = %w(exists create delete get_settings get_mapping flush get_alias get_aliases put_alias delete_alias exists_alias update_aliases)
+    INDICES_METHODS = %w(exists create delete get_settings get_mapping flush refresh get_alias get_aliases put_alias delete_alias exists_alias update_aliases)
     INDEX_METHODS   = %w(index delete get mget search count msearch scroll delete_by_query bulk)
 
     def initialize(client)
